--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week1",
+  "name": "wk1",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,5 +9,16 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/codeHokage1/sgs-week1/issues"
+  },
+  "homepage": "https://github.com/codeHokage1/sgs-week1#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "joi": "^17.8.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
